--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (max-width: 768px) {
+  .square-image {
+    width: 130px !important;
+  }
+}
