--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,8 @@ button:focus-visible {
   }
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .square-image.force-square {
     width: 130px !important;
   }
-}
+} */
